# serializer version: 1
# name: test_diagnostics_snapshot
  dict({
    'coordinator_data': dict({
      'growspaces': dict({
        'gs1': dict({
          'name': 'Test Growspace',
          'unique_id': '**REDACTED**',
        }),
      }),
      'plants': dict({
      }),
    }),
    'entry': dict({
      'data': dict({
        'latitude': '**REDACTED**',
        'some': 'data',
      }),
      'entry_id': 'test_entry',
    }),
    'integration_version': '0.3.5',
    'subsystems': dict({
      'dehumidifier': dict({
      }),
      'irrigation': dict({
      }),
    }),
    'system_stats': dict({
      'growspace_count': 0,
      'plant_count': 0,
      'strain_library_count': 0,
    }),
  })
# ---
# name: test_environment_config_serialization_snapshot
  dict({
    'bayesian_options': dict({
    }),
    'camera_entities': list([
    ]),
    'circulation_fan_entities': list([
    ]),
    'co2_sensor': None,
    'control_dehumidifier': True,
    'dehumidifier_entities': list([
    ]),
    'dehumidifier_thresholds': dict({
    }),
    'dli_target_flower': 45.0,
    'dli_target_veg': 30.0,
    'drain_volume_sensors': list([
    ]),
    'electricity_cost_per_kwh': 0.0,
    'energy_sensors': list([
    ]),
    'exhaust_fan_entities': list([
    ]),
    'feed_ec_sensors': list([
    ]),
    'flower_day_hours': 12,
    'humidifier_entities': list([
    ]),
    'humidity_sensor': 'sensor.hum',
    'humidity_sensors': list([
      'sensor.hum',
    ]),
    'irrigation_flow_sensors': list([
    ]),
    'irrigation_tanks': list([
    ]),
    'light_sensors': list([
    ]),
    'lst_offset': -2.0,
    'minimum_source_air_temperature': 18.0,
    'mold_threshold': 0.75,
    'ph_sensors': list([
    ]),
    'power_sensors': list([
    ]),
    'runoff_ec_sensors': list([
    ]),
    'sensor_coordinates': dict({
    }),
    'sensor_groups': list([
    ]),
    'snapshot_interval_hours': 24,
    'soil_moisture_sensor': None,
    'stress_threshold': 0.7,
    'substrate_ec_sensors': list([
    ]),
    'substrate_temperature_sensors': list([
    ]),
    'temperature_sensor': 'sensor.temp',
    'temperature_sensors': list([
      'sensor.temp',
    ]),
    'veg_day_hours': 18,
    'vision_checkup_config': dict({
      'early_check_offset_minutes': 60,
      'enabled': False,
      'history_limit': 10,
      'late_check_offset_minutes': 60,
      'mid_check_hours': 6,
    }),
    'vpd_sensor': 'sensor.vpd',
    'vpd_sensors': list([
      'sensor.vpd',
    ]),
  })
# ---
# name: test_growspace_serialization_snapshot
  dict({
    'created_at': '2026-01-12T12:00:00',
    'dehumidifier_config': dict({
    }),
    'device_id': None,
    'dimensions': dict({
      'depth': 120,
      'height': 200,
      'unit': 'cm',
      'width': 120,
    }),
    'drain_config': dict({
      'enabled': False,
      'max_ec_delta': 0.7,
      'max_readings': 100,
      'readings': list([
      ]),
      'target_runoff_percent': 20.0,
    }),
    'energy_tracking': dict({
      'cycle_start_date': '',
      'cycle_start_kwh': 0.0,
      'last_kwh_reading': 0.0,
    }),
    'environment_config': dict({
      'bayesian_options': dict({
      }),
      'camera_entities': list([
      ]),
      'circulation_fan_entities': list([
      ]),
      'co2_sensor': None,
      'control_dehumidifier': False,
      'dehumidifier_entities': list([
      ]),
      'dehumidifier_thresholds': dict({
      }),
      'dli_target_flower': 45.0,
      'dli_target_veg': 30.0,
      'drain_volume_sensors': list([
      ]),
      'electricity_cost_per_kwh': 0.0,
      'energy_sensors': list([
      ]),
      'exhaust_fan_entities': list([
      ]),
      'feed_ec_sensors': list([
      ]),
      'flower_day_hours': 12,
      'humidifier_entities': list([
      ]),
      'humidity_sensor': None,
      'humidity_sensors': list([
      ]),
      'irrigation_flow_sensors': list([
      ]),
      'irrigation_tanks': list([
      ]),
      'light_sensors': list([
      ]),
      'lst_offset': -2.0,
      'minimum_source_air_temperature': 18.0,
      'mold_threshold': 0.75,
      'ph_sensors': list([
      ]),
      'power_sensors': list([
      ]),
      'runoff_ec_sensors': list([
      ]),
      'sensor_coordinates': dict({
      }),
      'sensor_groups': list([
      ]),
      'snapshot_interval_hours': 24,
      'soil_moisture_sensor': None,
      'stress_threshold': 0.7,
      'substrate_ec_sensors': list([
      ]),
      'substrate_temperature_sensors': list([
      ]),
      'temperature_sensor': None,
      'temperature_sensors': list([
      ]),
      'veg_day_hours': 18,
      'vision_checkup_config': dict({
        'early_check_offset_minutes': 60,
        'enabled': False,
        'history_limit': 10,
        'late_check_offset_minutes': 60,
        'mid_check_hours': 6,
      }),
      'vpd_sensor': None,
      'vpd_sensors': list([
      ]),
    }),
    'growspace_type': 'veg',
    'id': 'gs_test',
    'irrigation_config': dict({
      'drain_duration': None,
      'drain_pump_entity': None,
      'drain_times': list([
      ]),
      'irrigation_duration': None,
      'irrigation_pump_entity': None,
      'irrigation_times': list([
      ]),
      'pump_flow_rate_ml_per_sec': 0.0,
      'veg_day_hours': 12,
    }),
    'irrigation_strategy': dict({
      'enabled': False,
      'lights_on_time': '06:00:00',
      'maintenance_dryback_percent': 2.0,
      'p0_duration_minutes': 60,
      'p2_stop_before_lights_off_minutes': 120,
      'shot_duration_seconds': 10,
      'shot_interval_minutes': 15,
      'target_vwc_percent': 55.0,
    }),
    'name': 'Test Growspace',
    'notification_target': None,
    'plants_per_row': 4,
    'rows': 2,
    'vision_checkup_history': list([
    ]),
    'water_usage': dict({
      'cycle_start_date': '',
      'daily_readings': list([
      ]),
      'max_daily_readings': 365,
      'total_liters': 0.0,
    }),
  })
# ---
# name: test_plant_serialization_snapshot
  dict({
    'clone_start': None,
    'col': 2,
    'created_at': None,
    'cure_start': None,
    'device_id': None,
    'dry_start': None,
    'flower_start': None,
    'genetics': dict({
      'phenotype_id': None,
      'phenotype_name': '',
      'strain_id': None,
      'strain_name': '',
    }),
    'growspace_id': 'gs_test',
    'harvest_metrics': dict({
      'cbd_percentage': None,
      'dry_weight': None,
      'terpene_profile': None,
      'thc_percentage': None,
      'trim_weight': None,
      'wet_weight': None,
    }),
    'last_ipm': None,
    'last_ipm_type': None,
    'last_trained': None,
    'last_training_technique': None,
    'last_watered': None,
    'mother_start': None,
    'phi_clearance_date': None,
    'plant_id': 'plant_1',
    'row': 1,
    'scores': dict({
      'aroma': None,
      'pest_resistance': None,
      'resin': None,
      'structure': None,
      'vigor': None,
    }),
    'seedling_start': None,
    'source_mother': None,
    'stage': 'veg',
    'stage_history': list([
    ]),
    'transition_date': None,
    'type': 'normal',
    'updated_at': None,
    'veg_start': None,
  })
# ---
